--- a/apps/web/src/components/pages/member/index.css
+++ b/apps/web/src/components/pages/member/index.css
@@ -10,3 +10,7 @@
 .error {
   @apply text-red-500 text-sm h-4;
 }
+
+.custom-div {
+  @apply w-full px-3 py-1 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-300;
+}
