--- a/apps/web/src/components/pages/member/index.css
+++ b/apps/web/src/components/pages/member/index.css
@@ -14,3 +14,15 @@
 .custom-div {
   @apply w-full px-3 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-yellow-300;
 }
+
+@layer utilities {
+  .number::-webkit-inner-spin-button,
+  .number::-webkit-outer-spin-button {
+    @apply appearance-none;
+    margin: 0;
+  }
+
+  .number {
+    @apply appearance-none;
+  }
+}
