style: 채팅 디자인 변경 + 공통 스크롤 관련 퍼블리싱

--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -72,6 +72,17 @@
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+  ::-webkit-scrollbar {
+  }
+
+  ::-webkit-scrollbar-track {
+  }
+
+  ::-webkit-scrollbar-thumb {
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+  }
 }
 
 @layer base {
