--- a/apps/client/src/components/pages/main/mentor/Calendar/CalendarContent.css
+++ b/apps/client/src/components/pages/main/mentor/Calendar/CalendarContent.css
@@ -7,10 +7,10 @@
 }
 
 .fc-event {
-  padding: 10px;
-  margin: 5px;
+  padding: 2px;
+  /* margin: 2px; */
   border-radius: 5px;
-  min-height: 40px;
+  min-height: 30px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
