--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -112,21 +112,21 @@
   border-radius: 50%;
   padding: 0.5rem;
   cursor: pointer;
-  box-shadow: 0px 20px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 15px 8px rgba(0, 0, 0, 0.2);
   border: thin solid white;
-  bottom: 3rem;
+  /* bottom: 3rem; */
   opacity: 0;
 }
 
 .go-Up-view {
   opacity: 1;
-  bottom: 5rem;
+  /* bottom: 5rem; */
   transition: all 0.5s ease-in-out;
 }
 
 .go_Down-hide {
   opacity: 0;
-  bottom: 3rem;
+  bottom: 5rem;
   transition: all 0.5s ease-in-out;
 }
 
@@ -266,6 +266,24 @@ ul.flip.play li.active {
 ul.flip.play li.active .down {
   z-index: 2;
   animation: turn 0.3s 0.3s linear both;
+}
+
+/* AIButton */
+.chatBot-Btn {
+  position: fixed;
+  right: 1rem;
+  z-index: 1000;
+  width: 52px;
+  height: 52px;
+  background-color: var(--primary);
+  color: var(--primary-foreground);
+  border-radius: 50%;
+  padding: 0.5rem;
+  cursor: pointer;
+  box-shadow: 0px 20px 8px rgba(0, 0, 0, 0.2);
+  border: thin solid white;
+  bottom: 3rem;
+  opacity: 0;
 }
 
 @keyframes turn {
