--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -268,22 +268,39 @@ ul.flip.play li.active .down {
   animation: turn 0.3s 0.3s linear both;
 }
 
-/* AIButton */
+/* ai feedback */
 .chatBot-Btn {
   position: fixed;
   right: 1rem;
+  bottom: 3.5rem;
   z-index: 1000;
   width: 52px;
   height: 52px;
-  background-color: var(--primary);
+  background-color: #ffd84d;
   color: var(--primary-foreground);
   border-radius: 50%;
   padding: 0.5rem;
   cursor: pointer;
   box-shadow: 0px 20px 8px rgba(0, 0, 0, 0.2);
   border: thin solid white;
-  bottom: 3rem;
+  /* opacity: 0; */
+}
+
+.transition-container {
+  transition:
+    transform 0.3s ease-in-out,
+    opacity 0.3s ease-in-out;
+}
+
+.ai-category-hidden {
+  transform: translateY(20px);
   opacity: 0;
+  pointer-events: none; /* 클릭 비활성화 */
+}
+
+.ai-category-visible {
+  transform: translateY(0px);
+  opacity: 1;
 }
 
 @keyframes turn {
@@ -292,6 +309,24 @@ ul.flip.play li.active .down {
   }
   100% {
     transform: rotateX(0deg);
+  }
+}
+
+.loading-spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(0, 0, 0, 0.1); /* 회색 테두리 */
+  border-top-color: #ffd84d; /* 회전하는 파란색 부분 */
+  border-radius: 50%; /* 원형 만들기 */
+  animation: spin 1s linear infinite; /* 무한 회전 애니메이션 */
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg); /* 시작 각도 */
+  }
+  to {
+    transform: rotate(360deg); /* 끝 각도 */
   }
 }
 
